ops/k8s/app/frontend-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx
  namespace: app
spec:
  selector:
    app: frontend-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
